@@ -1,4 +1,5 @@
 v 6.2.0
+  - Retrieving user ssh keys publically(github style): http://__HOST__/__USERNAME__.keys
   - Public projects are visible from the outside
   - Add group access to permissions page
   - Require current password to change one
